feat: finish test cases for LinkedIntQueue